--- a/hwhc-methodology.Rmd
+++ b/hwhc-methodology.Rmd
@@ -98,7 +98,7 @@ These statistics use the National Statistics Postcode lookup (NSPL) to identify 
 
 Postcodes are usually provided during application process. Some applicant's may then update postcode details when addresses change. The postcode used for these statistics will represent the latest known postcode information.
 
-Due to the method used to assign location, some data may change between releases. Historic location data may change: 
+Due to the method used to assign location, some data may change between releases. Historic location data may change:
 
 * if a person moves postcode and updates their details between releases
 * if the NSPL reclassifies a postcode against a different area in the new NSPL edition
@@ -118,10 +118,16 @@ Due to the method used to assign IMD quintile, some data may change between rele
 ### 2.2 Service specific data capture methodology {.toc-ignore}
 
 #### 2.2.1 NHS Low Income Scheme
-Reporting reflects data available in the NHSBSA Data Warehouse environment as of `r format(as.Date("20240409","%Y%m%d"),"%d %B %Y")`.
-
+Reporting reflects data available in the NHSBSA Data Warehouse environment as of `r format(as.Date(config$extract_date_lis,"%Y%m%d"),"%d %B %Y")`.
 
 ##### 2.2.1.1 Date restrictions and exclusions applied
+The number of applications and issued outcomes cover the period 2018/19 to 2023/24.
+
+For "active" certificates data can only be reported from 2019/20 onwards. This is due to historic data retention 
+schedules and the potential length of issued certificates.
+
+For analysis based on demographics such as age and location, data relates to the latest financial year of 2023/24.
+
 The following restrictions apply to all reporting relating to NHS Low Income Scheme:
 
 * Limited to HC1 applications submitted to NHS Low Income Scheme.
@@ -138,10 +144,98 @@ Where no HC2 or HC3 certificate was issued, there is no data available relating 
 ##### 2.2.1.3 Age
 The age reported will represent the age of the applicant at the time of application. Figures are reported in 5 year age bands, with applicants aged 65 and over grouped as 65+.
 
-To limit risk of inaccurate reporting, a classification of "unknown" represents data with confidence issues. FOR NHS Low Income Scheme data this includes where the calculated age would be less than 15 or greater than 99.
+To limit risk of inaccurate reporting, a classification of "unknown" represents data with confidence issues. For NHS Low Income Scheme data this includes where the calculated age would be less than 15 or greater than 99.
 
-##### 2.2.1.4 Certificate Duration
+##### 2.2.1.4 Certificate duration
 Duration is the number of months between the start and expiry date for a certificate. To simplify reporting, age bands represent the most common scenarios.
+
+##### 2.2.1.5 ICB base population
+For ICB reporting, rates have been calculated per 10,000 base population. This base population is based on mid-year population estimates published by ONS, limited to population aged 16 and above. 
+
+#### 2.2.2 Maternity exemption certificate
+Reporting reflects data available in the NHSBSA Data Warehouse environment as of `r format(as.Date(config$extract_date_hes,"%Y%m%d"),"%d %B %Y")`.
+
+##### 2.2.2.1 Date restrictions and exclusions applied
+The number of applications and issued outcomes cover the period 2018/19 to 2023/24.
+
+For "active" certificates data can only be reported from 2019/20 onwards. This is due to historic data retention 
+schedules and the potential length of issued certificates.
+
+For analysis based on demographics such as age and location, data relates to the latest financial year of 2023/24.
+
+Applications that are still ongoing or were abandoned before completion are only included in figures relating to applications received.
+
+##### 2.2.2.2 Age
+The age reported will represent the age of the applicant at the time of application. Figures are reported in 5 year age bands, with applicants aged 45 and over grouped as 45+.
+
+To limit risk of inaccurate reporting, a classification of "unknown" represents data with confidence issues. For maternity exemption data this includes where the calculated age would be less than 15 or greater than 60.
+
+##### 2.2.2.3 Proportion of certificates issued relative to expected due date
+This measure shows the relationship between the date the certificate was issued to the applicant and the expected due date. The expected due date will typically be supplied when the application is submitted and therefore may not always represent the actual date of delivery. 
+
+Figures have been reported by number of months, with figures rounded to the nearest number of months. For example:
+
+* expected due date of 10 January and certificate
+
+
+
+##### 2.2.2.4 ICB base population
+For ICB reporting, rates have been calculated per 10,000 base population. This base population is based on mid-year population estimates published by ONS for 2022, limited to female population aged 16 to 45.
+
+### 2.3 Base population identification {.toc-ignore}
+
+When reporting activity by geographic area, such as ICB, figures can be standardised to adjust for area size. The easiest method for this to calculate a rate using an appropriate population baseline. Within the help with health costs report two different population baselines have been applied.
+
+#### 2.3.1 NHS prescribing data patient counts
+
+Some help with health cost services are focused on providing support with NHS prescription costs. For these services the most appropriate base population may be estimated patient counts based on data captured from NHS prescribing data. Where estimated patient counts 
+
+The patient count estimates are based on available data from the NHS prescription dataset maintained by NHSBSA. These patient counts may omit patients whose prescribing activity either cannot be identified or cannot be attributed to a geographic area or age group. For 2023/24, the required patient information could be identified for XXX% of prescription items dispensed in England.
+
+##### 2.3.1.1 Geographic area identification
+
+For prescribing via the Electronic Prescription Service (EPS), the patient's residential address is captured from the prescription data. This address is then assigned to a lower-layer super output area (LSOA) 2011. The LSOA can then be used to identify both the ICB and the deprivation profile (see section 2.1.3) based on mapping available in the National Statistics Postcode Lookup (NSPL).
+
+LSOA is only captured for prescriptions via EPS. For patients receiving both paper and EPS prescribing, the LSOA data is based on their EPS activity only.
+
+Some patients may be captured with data against multiple residential addresses. To prevent patient's being counted multiple times, in these instances patients have been assigned to a single location. This is based on data captured against the latest available prescription record in the time period.
+
+##### 2.3.1.3 Patient age
+
+To report a patient’s age consistently across a financial year these statistics classify a patient based on their age on the 30th of September of that given financial year. This uses date of birth information from Personal Demographic Service (PDS) for verified NHS numbers only. 
+
+Information relating to NHS numbers that have not been verified by PDS were excluded from patient counts as these patients could not be accurately assigned to an age group. 
+
+In rare circumstances patient data may be updated resulting in multiple dates of birth being captured for an NHS number. In these instances, the date of birth captured against the latest available prescription record in the time period was used to calculate the patient's age.
+
+##### 2.3.1.5 Drug classification (HRT PPC population only)
+
+The NHSBSA holds drug and prescription data at a pack level and uses this information for the correct reimbursement of dispensing contractors. The drug database maintained by NHSBSA includes flags to identify which drugs are licensed to treat menopause in the UK and covered by the HRT PPC.
+
+For population baseline figures used for HRT PPC, prescribing activity is restricted to only count patients who received any of the medication covered by the HRT PPC. Although medication could be added or removed from the qualifying medication list, medicines were included in the patient count analysis if they were covered by the HRT PPC at any point during the reported time period.
+
+For population baseline figures for certificates other than HRT PPC, no drug restrictions have been applied.
+
+#### 2.3.2 ONS published population estimates
+
+Some help with health cost services provide support with a range of costs. For these services the most appropriate base population may be estimated population counts as published by ONS.
+
+The population estimates were sourced from [population estimates for health geographies dataset published by ONS](https://www.ons.gov.uk/peoplepopulationandcommunity/populationandmigration/populationestimates/datasets/clinicalcommissioninggroupmidyearpopulationestimates).
+
+These population estimates are based on mid-year estimates, with 2022 being the latest available year at time of reporting. Figures published by ONS include a breakdown by age and gender. Within the help with health costs report, data was aggregated as required to include the most appropriate combination of age and gender for the service being reported.
+
+#### 2.3.2 ONS live birth statistics
+
+To provide context for the maternity exemption certificate some live birth statistics have been reported. These figures were sourced from data published by ONS. It is not suitable, or possible, to use these figures as an accurate representation of the number of potential claims for maternity exemption certificates. Therefore this figures should only be considered as additional context.
+
+There are some considerations to recognise when comparing live births statistics with maternity exemption certificate data:
+
+* Live births will not include all pregnancies which could be eligible for a maternity exemption certificate.
+* The time periods can not be accurately aligned. ONS publish live birth statistics by calendar year, with 2021 being the latest available year (at time of reporting) for the breakdowns required in this publication. Additionally, maternity exemption certificates cover a period longer than a single year as they cover both the pregnancy and upto one year following birth.
+
+The distribution of live births by age of mother was sourced from [ONS nomis tool query for live births by characteristics of mother](https://www.nomisweb.co.uk/query/construct/summary.asp?mode=construct&version=0&dataset=203).
+
+The distribution of live births by IMD decile was sourced from [birth characteristics dataset published by ONS (see worksheet 12)](https://www.ons.gov.uk/file?uri=/peoplepopulationandcommunity/birthsdeathsandmarriages/livebirths/datasets/birthcharacteristicsinenglandandwales/2021/birthcharacteristics2021workbooknew.xlsx).
 
 ## 3. Changes to this publication
 
